# basic-auth

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  basic-auth.example.conf  configure.ac  index.html  users.empty.db
conf/: basic-auth.conf  users.conf
sql/: setup.sql
src/: CMakeLists.txt  Makefile.am  authenticator.cpp  authenticator.h  authenticator.hpp  config.h.cmake  configurator.cpp  configurator.h  configurator.hpp  logger.cpp  logger.h  logger.hpp  main.cpp  md5.cpp  md5.hpp  utils.cpp  utils.h
src/authenticator/: authenticator.cpp
src/yaml-cpp/: CMakeLists.txt  aliasmanager.cpp  emitfromevents.cpp  emitter.cpp  emitterstate.cpp  emitterstate.h  emitterutils.cpp  emitterutils.h  exp.cpp  indentation.h  iterator.cpp  node.cpp  nodebuilder.cpp  nodebuilder.h  nodeownership.cpp  nodeownership.h  parser.cpp  ptr_stack.h  ptr_vector.h  scanner.cpp  scanscalar.cpp  scantoken.cpp  setting.h  singledocparser.cpp  singledocparser.h  stream.h  streamcharsource.h  token.h
